--- a/Datacleaning.ipynb
+++ b/Datacleaning.ipynb
@@ -373,20 +373,35 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 108
+          "base_uri": "https://localhost:8080/"
         },
         "id": "FlS7EbVA04Rc",
-        "outputId": "92654caa-7c72-46ec-adfe-2969e892d7fc"
+        "outputId": "7980c2bb-928e-41ce-89b5-99b469d75718"
       },
-      "execution_count": 23,
+      "execution_count": 29,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (<ipython-input-23-3cb712803939>, line 3)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-23-3cb712803939>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    print(\"Number of rows and columns:\", df_cleaned.shape)df.head(10)  # shows top 10 rows\u001b[0m\n\u001b[0m                                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "transactionid      0\n",
+            "date               0\n",
+            "time               0\n",
+            "customerid         0\n",
+            "productid          0\n",
+            "productname        0\n",
+            "category           0\n",
+            "quantity           0\n",
+            "unitprice          0\n",
+            "discountapplied    0\n",
+            "totalprice         0\n",
+            "paymentmethod      0\n",
+            "region             0\n",
+            "salespersonid      0\n",
+            "customerage        0\n",
+            "customergender     0\n",
+            "dtype: int64\n",
+            "Number of rows and columns: (4855, 16)\n"
           ]
         }
       ]
